--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,9 +2,43 @@
 parts =     
     apache  
     php
+    mysql
+
 [versions]
 apache-httpd = 2.2.17
 
+[config]
+apache-port = 8080
+apache-port-ssl = 8443
+mysqld-port = 3306
+mysqld-root-password = root
+memcached-port = 11222
+
+[templates]
+recipe = z3c.recipe.filetemplate
+source-directory = template
+server_admin = admin@localhost
+sites_dir = ${buildout:directory}/Sites
+interpreted-options = hostname
+hostname = os.uname()[1]
+force-overwrite = true
+
+[create_symlinks]
+recipe = collective.recipe.cmd
+on_install = true
+on_update = true
+# deps
+cmds =
+  cd ${buildout:directory}/bin
+  ln -sf ${php:location}/bin/php .
+  ln -sf ${php:location}/bin/phpunit .
+  ln -sf ${php:location}/bin/pear .
+  ln -sf ${php:location}/bin/pecl .
+  ln -sf ${mysql:location}/bin/mysql .
+  ln -sf ${mysql:location}/bin/mysqldump .
+  ln -sf ${apache:location}/bin/apachectl .
+  ln -sf ${apache:location}/bin/ab .
+ 
 [php]
 recipe = hexagonit.recipe.cmmi
 keep-compile-dir = true
@@ -45,3 +79,23 @@ configure-options =
    --enable-proxy
    --enable-proxy-connect
    --enable-proxy-http
+
+[mysql]
+recipe = hexagonit.recipe.cmmi
+url = http://ftp.gwdg.de/pub/misc/mysql/Downloads/MySQL-5.1/mysql-5.1.53.tar.gz
+strip-top-level-dir = true
+port = ${config:mysqld-port}
+root-password = ${config:mysqld-root-password}
+
+configure-options = --with-extra-charsets=complex
+                  --enable-thread-safe-client
+                  --with-unix-socket-path=${buildout:directory}/var/mysql/mysql.sock
+                  --enable-assembler
+                  --enable-local-infile
+                  --with-big-tables
+                  --with-plugins=myisam,myisammrg,federated,innodb_plugin
+
+# options for 5.0.x
+#                  --with-federated-storage-engine
+#                  --without-bench
+#                  --with-sphinx-storage-engine
