configs angepasst mit tim

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,8 +1,12 @@
 [buildout]
 parts =     
-    apache  
-    php
-    mysql
+   apache  
+   php
+   mysql
+   create_symlinks
+   templates
+
+versions = versions
 
 [versions]
 apache-httpd = 2.2.17
@@ -27,58 +31,57 @@ force-overwrite = true
 recipe = collective.recipe.cmd
 on_install = true
 on_update = true
+dummy_option = ${php:url} # hack to ensure that php is compiled before creating the symlinks
 # deps
 cmds =
-  cd ${buildout:directory}/bin
-  ln -sf ${php:location}/bin/php .
-  ln -sf ${php:location}/bin/phpunit .
-  ln -sf ${php:location}/bin/pear .
-  ln -sf ${php:location}/bin/pecl .
-  ln -sf ${mysql:location}/bin/mysql .
-  ln -sf ${mysql:location}/bin/mysqldump .
-  ln -sf ${apache:location}/bin/apachectl .
-  ln -sf ${apache:location}/bin/ab .
- 
+ cd ${buildout:directory}/bin
+ ln -sf ${php:location}/bin/php .
+ ln -sf ${php:location}/bin/phpunit .
+ ln -sf ${php:location}/bin/pear .
+ ln -sf ${php:location}/bin/pecl .
+ ln -sf ${mysql:location}/bin/mysql .
+ ln -sf ${mysql:location}/bin/mysqldump .
+ ln -sf ${apache:location}/bin/apachectl .
+ ln -sf ${apache:location}/bin/ab .
+
 [php]
 recipe = hexagonit.recipe.cmmi
 keep-compile-dir = true
 url = http://us3.php.net/get/php-5.3.5.tar.gz/from/de.php.net/mirror
 
-configure-options = 
---prefix=${buildout:directory}/parts/php-build
-    --with-apxs2=${buildout:directory}/parts/apache/bin/apxs
-    --with-mysql
-    --with-config-file-path=${buildout:directory}/var/php
-    --enable-force-cgi-redirect
-    --with-iconv=${buildout:directory}/parts/libiconv
-    --with-curl=${buildout:directory}/parts/curl
-    --enable-track-vars
-    --with-gettext=${buildout:directory}/parts/gettext
-    --with-config-file-path=${buildout:directory}/parts/apache-build/conf
-    --enable-trans-id
-    --enable-ftp
-    --enable-mbstring
-    --with-sqlite
-    --enable-sqlite-utf8
-    --enable-xml
-    --with-xml 
+configure-options = --with-apxs2=${apache:location}/bin/apxs
+   --with-mysql
+#    --with-config-file-path=${buildout:directory}/var/php
+   --enable-force-cgi-redirect
+#    --with-iconv=${buildout:directory}/parts/libiconv
+#    --with-curl=${buildout:directory}/parts/curl
+   --enable-track-vars
+#    --with-gettext=${buildout:directory}/parts/gettext
+#    --with-config-file-path=${buildout:directory}/parts/apache-build/conf
+   --enable-trans-id
+   --enable-ftp
+   --enable-mbstring
+   --with-sqlite
+   --enable-sqlite-utf8
+   --enable-xml
+   --with-xml 
 
 [apache]
 recipe = hexagonit.recipe.cmmi
 url = http://archive.apache.org/dist/httpd/httpd-${versions:apache-httpd}.tar.bz2
 configure-options =
-   --enable-so
-   --enable-rewrite
-   --enable-mods-shared=all
-   --disable-ssl
-   --enable-cache
-   --enable-disk_cache
-   --enable-file_cache
-   --enable-mem_cache
-   --enable-deflate
-   --enable-proxy
-   --enable-proxy-connect
-   --enable-proxy-http
+  --enable-so
+  --enable-rewrite
+  --enable-mods-shared=all
+  --disable-ssl
+  --enable-cache
+  --enable-disk_cache
+  --enable-file_cache
+  --enable-mem_cache
+  --enable-deflate
+  --enable-proxy
+  --enable-proxy-connect
+  --enable-proxy-http
 
 [mysql]
 recipe = hexagonit.recipe.cmmi
@@ -88,14 +91,15 @@ port = ${config:mysqld-port}
 root-password = ${config:mysqld-root-password}
 
 configure-options = --with-extra-charsets=complex
-                  --enable-thread-safe-client
-                  --with-unix-socket-path=${buildout:directory}/var/mysql/mysql.sock
-                  --enable-assembler
-                  --enable-local-infile
-                  --with-big-tables
-                  --with-plugins=myisam,myisammrg,federated,innodb_plugin
+                 --enable-thread-safe-client
+                 --with-unix-socket-path=${buildout:directory}/var/mysql/mysql.sock
+                 --enable-assembler
+                 --enable-local-infile
+                 --with-big-tables
+                 --with-plugins=myisam,myisammrg,federated,innodb_plugin
 
 # options for 5.0.x
 #                  --with-federated-storage-engine
 #                  --without-bench
 #                  --with-sphinx-storage-engine
+
