--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,10 +1,11 @@
 [buildout]
 parts =     
-   apache  
+#   apache
+   lighttpd
    php
    mysql
    create_symlinks
-   templates
+#   templates
 
 versions = versions
 
@@ -39,30 +40,34 @@ cmds =
  ln -sf ${php:location}/bin/phpunit .
  ln -sf ${php:location}/bin/pear .
  ln -sf ${php:location}/bin/pecl .
- ln -sf ${mysql:location}/bin/mysql .
- ln -sf ${mysql:location}/bin/mysqldump .
- ln -sf ${apache:location}/bin/apachectl .
- ln -sf ${apache:location}/bin/ab .
+# ln -sf ${mysql:location}/bin/mysql .
+# ln -sf ${mysql:location}/bin/mysqldump .
+# ln -sf ${apache:location}/bin/apachectl .
+# ln -sf ${apache:location}/bin/ab .
+ ln -sf ${lighttpd:location}/bin/lighttpd .
+ ln -sf ${lighttpd:location}/bin/lighttpd-angel .
 
 [php]
 recipe = hexagonit.recipe.cmmi
 keep-compile-dir = true
 url = http://us3.php.net/get/php-5.3.5.tar.gz/from/de.php.net/mirror
 
-configure-options = --with-apxs2=${apache:location}/bin/apxs
-   --with-mysql
-#    --with-config-file-path=${buildout:directory}/var/php
-   --enable-force-cgi-redirect
+configure-options = 
+   --enable-fastcgi
+#   --with-apxs2=${apache:location}/bin/apxs
+#   --with-mysql    
+   --with-config-file-path=${buildout:directory}/var/php
+#   --enable-force-cgi-redirect
 #    --with-iconv=${buildout:directory}/parts/libiconv
 #    --with-curl=${buildout:directory}/parts/curl
-   --enable-track-vars
+    --enable-track-vars
 #    --with-gettext=${buildout:directory}/parts/gettext
 #    --with-config-file-path=${buildout:directory}/parts/apache-build/conf
-   --enable-trans-id
+#   --enable-trans-id
    --enable-ftp
-   --enable-mbstring
-   --with-sqlite
-   --enable-sqlite-utf8
+#   --enable-mbstring
+#   --with-sqlite
+#   --enable-sqlite-utf8
    --enable-xml
    --with-xml 
 
@@ -103,3 +108,10 @@ configure-options = --with-extra-charsets=complex
 #                  --without-bench
 #                  --with-sphinx-storage-engine
 
+[lighttpd]
+recipe = hexagonit.recipe.cmmi
+url = http://download.lighttpd.net/lighttpd/releases-1.4.x/lighttpd-1.4.28.tar.gz
+configure-options =
+   --enable-fastcgi
+   --enable-discard-path
+   --enable-force-cgi-redirect
