--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,16 +1,25 @@
 [buildout]
 parts =     
-#   apache
+#   monit
+   apache
    lighttpd
+   spawn-fcgi
+   gettext
+   libevent
+   memcached
    php
    mysql
    create_symlinks
-#   templates
+   templates
 
 versions = versions
 
 [versions]
 apache-httpd = 2.2.17
+php = 5.3.6
+gettext = 0.18
+curl = 7.21.4
+memcached = 1.4.5
 
 [config]
 apache-port = 8080
@@ -36,40 +45,79 @@ dummy_option = ${php:url} # hack to ensure that php is compiled before creating 
 # deps
 cmds =
  cd ${buildout:directory}/bin
+
+ ln -sf ${gettext:location}/bin/gettext.sh .
+ ln -sf ${curl:location}/bin/curl .
+
+ ln -sf ${memcached:location}/bin/memcached .
+
  ln -sf ${php:location}/bin/php .
  ln -sf ${php:location}/bin/phpunit .
  ln -sf ${php:location}/bin/pear .
  ln -sf ${php:location}/bin/pecl .
-# ln -sf ${mysql:location}/bin/mysql .
-# ln -sf ${mysql:location}/bin/mysqldump .
-# ln -sf ${apache:location}/bin/apachectl .
-# ln -sf ${apache:location}/bin/ab .
+
+ ln -sf ${mysql:location}/bin/mysql .
+ ln -sf ${mysql:location}/bin/mysqldump .
+
+ ln -sf ${apache:location}/bin/apachectl .
+ ln -sf ${apache:location}/bin/ab .
+
  ln -sf ${lighttpd:location}/bin/lighttpd .
  ln -sf ${lighttpd:location}/bin/lighttpd-angel .
 
 [php]
 recipe = hexagonit.recipe.cmmi
-keep-compile-dir = true
-url = http://us3.php.net/get/php-5.3.5.tar.gz/from/de.php.net/mirror
+url = http://us3.php.net/get/php-${versions:php}.tar.gz/from/de.php.net/mirror
 
 configure-options = 
    --enable-fastcgi
-#   --with-apxs2=${apache:location}/bin/apxs
-#   --with-mysql    
+   --with-apxs2=${apache:location}/bin/apxs
+   --with-mysql=${mysql:location} 
    --with-config-file-path=${buildout:directory}/var/php
 #   --enable-force-cgi-redirect
 #    --with-iconv=${buildout:directory}/parts/libiconv
-#    --with-curl=${buildout:directory}/parts/curl
+    --with-curl=${curl:location}
     --enable-track-vars
-#    --with-gettext=${buildout:directory}/parts/gettext
-#    --with-config-file-path=${buildout:directory}/parts/apache-build/conf
+    --with-gettext=${gettext:location}
+#    --with-config-file-path=${apache:location}/conf
 #   --enable-trans-id
    --enable-ftp
 #   --enable-mbstring
-#   --with-sqlite
-#   --enable-sqlite-utf8
+   --with-sqlite
+   --enable-sqlite-utf8
    --enable-xml
    --with-xml 
+   --with-memcached=${memcached:location}
+
+[gettext]
+recipe = hexagonit.recipe.cmmi
+url = http://ftp.gnu.org/gnu/gettext/gettext-${versions:gettext}.tar.gz
+
+[curl]
+recipe = hexagonit.recipe.cmmi
+url = http://curl.haxx.se/download/curl-${versions:curl}.tar.gz
+
+[memcached]
+recipe = hexagonit.recipe.cmmi
+url = http://memcached.googlecode.com/files/memcached-${versions:memcached}.tar.gz
+configure-options =
+   --with-libevent=${libevent:location}
+
+[libevent]
+recipe = hexagonit.recipe.cmmi
+url = http://monkey.org/~provos/libevent-2.0.10-stable.tar.gz
+
+[lighttpd]
+recipe = hexagonit.recipe.cmmi
+url = http://download.lighttpd.net/lighttpd/releases-1.4.x/lighttpd-1.4.28.tar.gz
+configure-options =
+   --enable-fastcgi
+   --enable-discard-path
+   --enable-force-cgi-redirect
+
+[spawn-fcgi]
+recipe = hexagonit.recipe.cmmi
+url = http://www.lighttpd.net/download/spawn-fcgi-1.6.3.tar.gz
 
 [apache]
 recipe = hexagonit.recipe.cmmi
@@ -108,10 +156,6 @@ configure-options = --with-extra-charsets=complex
 #                  --without-bench
 #                  --with-sphinx-storage-engine
 
-[lighttpd]
+[monit]
 recipe = hexagonit.recipe.cmmi
-url = http://download.lighttpd.net/lighttpd/releases-1.4.x/lighttpd-1.4.28.tar.gz
-configure-options =
-   --enable-fastcgi
-   --enable-discard-path
-   --enable-force-cgi-redirect
+url = http://monit.googlecode.com/svn/trunk
