nginx and more added

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,10 +2,9 @@
 parts =     
 #   monit
    apache
-   lighttpd
+#   lighttpd
+   nginx
    spawn-fcgi
-   gettext
-   libevent
    memcached
    php
    mysql
@@ -20,6 +19,8 @@ php = 5.3.6
 gettext = 0.18
 curl = 7.21.4
 memcached = 1.4.5
+nginx = 0.8.54
+pcre = 8.02
 
 [config]
 apache-port = 8080
@@ -55,6 +56,7 @@ cmds =
  ln -sf ${php:location}/bin/phpunit .
  ln -sf ${php:location}/bin/pear .
  ln -sf ${php:location}/bin/pecl .
+ ln -sf ${php:location}/bin/phpize .
 
  ln -sf ${mysql:location}/bin/mysql .
  ln -sf ${mysql:location}/bin/mysqldump .
@@ -65,29 +67,34 @@ cmds =
  ln -sf ${lighttpd:location}/bin/lighttpd .
  ln -sf ${lighttpd:location}/bin/lighttpd-angel .
 
+ ln -sf ${nginx:location}/sbin/nginx .
+
 [php]
 recipe = hexagonit.recipe.cmmi
 url = http://us3.php.net/get/php-${versions:php}.tar.gz/from/de.php.net/mirror
 
 configure-options = 
-   --enable-fastcgi
+   --enable-cgi
    --with-apxs2=${apache:location}/bin/apxs
    --with-mysql=${mysql:location} 
    --with-config-file-path=${buildout:directory}/var/php
-#   --enable-force-cgi-redirect
-#    --with-iconv=${buildout:directory}/parts/libiconv
-    --with-curl=${curl:location}
-    --enable-track-vars
-    --with-gettext=${gettext:location}
-#    --with-config-file-path=${apache:location}/conf
-#   --enable-trans-id
+   --enable-force-cgi-redirect
+#   --with-iconv=${libconv:location}
+   --with-curl=${curl:location}
+   --enable-track-vars
+   --with-gettext=${gettext:location}
+   --enable-trans-id
    --enable-ftp
-#   --enable-mbstring
-   --with-sqlite
-   --enable-sqlite-utf8
+   --enable-mbstring
+#   --with-sqlite
+#   --enable-sqlite-utf8
    --enable-xml
    --with-xml 
    --with-memcached=${memcached:location}
+
+[libconv]
+recipe = hexagonit.recipe.cmmi
+url = http://ftp.gnu.org/pub/gnu/libiconv/libiconv-1.13.1.tar.gz
 
 [gettext]
 recipe = hexagonit.recipe.cmmi
@@ -159,3 +166,16 @@ configure-options = --with-extra-charsets=complex
 [monit]
 recipe = hexagonit.recipe.cmmi
 url = http://monit.googlecode.com/svn/trunk
+
+[nginx]
+recipe = hexagonit.recipe.cmmi
+url = http://sysoev.ru/nginx/nginx-${versions:nginx}.tar.gz
+
+configure-options =
+   --with-pcre=${pcre:location}__compile__/pcre-${versions:pcre}
+
+[pcre]
+# required for NGINX URL Rewrite
+recipe = hexagonit.recipe.cmmi
+keep-compile-dir = true
+url = ftp://ftp.csx.cam.ac.uk/pub/software/programming/pcre/pcre-${versions:pcre}.tar.gz
