--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,6 @@
 [buildout]
 parts =     
-#   monit
+   monit
    apache
 #   lighttpd
    nginx
@@ -8,6 +8,7 @@ parts =
    memcached
    php
    mysql
+   postgresql
    create_symlinks
    templates
 
@@ -165,7 +166,7 @@ configure-options = --with-extra-charsets=complex
 
 [monit]
 recipe = hexagonit.recipe.cmmi
-url = http://monit.googlecode.com/svn/trunk
+url = http://mmonit.com/monit/dist/monit-5.2.4.tar.gz
 
 [nginx]
 recipe = hexagonit.recipe.cmmi
@@ -179,3 +180,7 @@ configure-options =
 recipe = hexagonit.recipe.cmmi
 keep-compile-dir = true
 url = ftp://ftp.csx.cam.ac.uk/pub/software/programming/pcre/pcre-${versions:pcre}.tar.gz
+
+[postgresql]
+recipe = hexagonit.recipe.cmmi
+url = http://wwwmaster.postgresql.org/redir/53/h/source/v9.0.3/postgresql-9.0.3.tar.gz
