--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,16 +1,15 @@
 [buildout]
 parts =     
-   monit
    apache
-#   lighttpd
-   nginx
-   spawn-fcgi
+#   nginx
+#   spawn-fcgi
    memcached
    php
-   mysql
-   postgresql
+#   mysql
+#   postgresql
    create_symlinks
    templates
+   supervisor
 
 versions = versions
 
@@ -34,7 +33,6 @@ memcached-port = 11222
 recipe = z3c.recipe.filetemplate
 source-directory = template
 server_admin = admin@localhost
-sites_dir = ${buildout:directory}/Sites
 interpreted-options = hostname
 hostname = os.uname()[1]
 force-overwrite = true
@@ -65,10 +63,16 @@ cmds =
  ln -sf ${apache:location}/bin/apachectl .
  ln -sf ${apache:location}/bin/ab .
 
- ln -sf ${lighttpd:location}/bin/lighttpd .
- ln -sf ${lighttpd:location}/bin/lighttpd-angel .
+# ln -sf ${nginx:location}/sbin/nginx .
 
- ln -sf ${nginx:location}/sbin/nginx .
+[supervisor]
+recipe = collective.recipe.supervisor
+supervisord-conf = ${buildout:parts-directory}/${:_buildout_section_name_}/supervisord.conf
+logfile = ${buildout:parts-directory}/${:_buildout_section_name_}/supervisord.log
+port = 9000
+programs =
+  10 mysql    	${mysql:location}/bin/mysqld_safe [${buildout:directory}] ${buildout:directory} true
+  30 apache     ${apache:location}/bin/httpd [-DNO_DETACH -f ${apache:location}/etc/conf/httpd.conf] ${buildout:directory} true
 
 [php]
 recipe = hexagonit.recipe.cmmi
@@ -76,7 +80,7 @@ url = http://us3.php.net/get/php-${versions:php}.tar.gz/from/de.php.net/mirror
 
 configure-options = 
    --enable-cgi
-   --with-apxs2=${apache:location}/bin/apxs
+   --with-apxs2
    --with-mysql=${mysql:location} 
    --with-config-file-path=${buildout:directory}/var/php
    --enable-force-cgi-redirect
@@ -97,6 +101,10 @@ configure-options =
 recipe = hexagonit.recipe.cmmi
 url = http://ftp.gnu.org/pub/gnu/libiconv/libiconv-1.13.1.tar.gz
 
+[libevent]
+recipe = hexagonit.recipe.cmmi
+url = http://sourceforge.net/projects/levent/files/libevent/libevent-2.0/libevent-2.0.10-stable.tar.gz
+
 [gettext]
 recipe = hexagonit.recipe.cmmi
 url = http://ftp.gnu.org/gnu/gettext/gettext-${versions:gettext}.tar.gz
@@ -110,10 +118,6 @@ recipe = hexagonit.recipe.cmmi
 url = http://memcached.googlecode.com/files/memcached-${versions:memcached}.tar.gz
 configure-options =
    --with-libevent=${libevent:location}
-
-[libevent]
-recipe = hexagonit.recipe.cmmi
-url = http://monkey.org/~provos/libevent-2.0.10-stable.tar.gz
 
 [lighttpd]
 recipe = hexagonit.recipe.cmmi
@@ -143,6 +147,7 @@ configure-options =
   --enable-proxy
   --enable-proxy-connect
   --enable-proxy-http
+keep-compile-dir = true
 
 [mysql]
 recipe = hexagonit.recipe.cmmi
@@ -164,14 +169,9 @@ configure-options = --with-extra-charsets=complex
 #                  --without-bench
 #                  --with-sphinx-storage-engine
 
-[monit]
-recipe = hexagonit.recipe.cmmi
-url = http://mmonit.com/monit/dist/monit-5.2.4.tar.gz
-
 [nginx]
 recipe = hexagonit.recipe.cmmi
 url = http://sysoev.ru/nginx/nginx-${versions:nginx}.tar.gz
-
 configure-options =
    --with-pcre=${pcre:location}__compile__/pcre-${versions:pcre}
 
