--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,9 +3,9 @@ parts =
    apache
 #   nginx
 #   spawn-fcgi
-   memcached
    php
-#   mysql
+   mysql
+   memcached
 #   postgresql
    create_symlinks
    templates
@@ -32,10 +32,11 @@ memcached-port = 11222
 [templates]
 recipe = z3c.recipe.filetemplate
 source-directory = template
+force-overwrite = true
 server_admin = admin@localhost
 interpreted-options = hostname
 hostname = os.uname()[1]
-force-overwrite = true
+
 
 [create_symlinks]
 recipe = collective.recipe.cmd
@@ -80,8 +81,7 @@ url = http://us3.php.net/get/php-${versions:php}.tar.gz/from/de.php.net/mirror
 
 configure-options = 
    --enable-cgi
-   --with-apxs2
-   --with-mysql=${mysql:location} 
+   --with-apxs2=${apache:location}/bin/apxs
    --with-config-file-path=${buildout:directory}/var/php
    --enable-force-cgi-redirect
 #   --with-iconv=${libconv:location}
@@ -91,11 +91,14 @@ configure-options =
    --enable-trans-id
    --enable-ftp
    --enable-mbstring
-#   --with-sqlite
-#   --enable-sqlite-utf8
    --enable-xml
    --with-xml 
    --with-memcached=${memcached:location}
+
+# as recommended by mysql http://dev.mysql.com/downloads/connector/php-mysqlnd/
+   --with-mysql=${mysql:location} 
+   --with-mysqli=mysqlnd
+   --with-pdo-mysql=mysqlnd
 
 [libconv]
 recipe = hexagonit.recipe.cmmi
@@ -119,18 +122,6 @@ url = http://memcached.googlecode.com/files/memcached-${versions:memcached}.tar.
 configure-options =
    --with-libevent=${libevent:location}
 
-[lighttpd]
-recipe = hexagonit.recipe.cmmi
-url = http://download.lighttpd.net/lighttpd/releases-1.4.x/lighttpd-1.4.28.tar.gz
-configure-options =
-   --enable-fastcgi
-   --enable-discard-path
-   --enable-force-cgi-redirect
-
-[spawn-fcgi]
-recipe = hexagonit.recipe.cmmi
-url = http://www.lighttpd.net/download/spawn-fcgi-1.6.3.tar.gz
-
 [apache]
 recipe = hexagonit.recipe.cmmi
 url = http://archive.apache.org/dist/httpd/httpd-${versions:apache-httpd}.tar.bz2
@@ -147,7 +138,6 @@ configure-options =
   --enable-proxy
   --enable-proxy-connect
   --enable-proxy-http
-keep-compile-dir = true
 
 [mysql]
 recipe = hexagonit.recipe.cmmi
@@ -180,6 +170,10 @@ configure-options =
 recipe = hexagonit.recipe.cmmi
 keep-compile-dir = true
 url = ftp://ftp.csx.cam.ac.uk/pub/software/programming/pcre/pcre-${versions:pcre}.tar.gz
+
+[php-fpm]
+recipe = hexagonit.recipe.cmmi
+url = http://php-fpm.org/downloads/php-5.2.17-fpm-0.5.14.diff.gz
 
 [postgresql]
 recipe = hexagonit.recipe.cmmi
