--- a/template/parts/apache/conf/httpd.conf.in
+++ b/template/parts/apache/conf/httpd.conf.in
@@ -113,6 +113,7 @@ LoadModule speling_module modules/mod_speling.so
 LoadModule userdir_module modules/mod_userdir.so
 LoadModule alias_module modules/mod_alias.so
 LoadModule rewrite_module modules/mod_rewrite.so
+LoadModule php5_module modules/libphp5.so
 
 <IfModule !mpm_netware_module>
 <IfModule !mpm_winnt_module>
@@ -368,6 +369,7 @@ DefaultType text/plain
     #
     AddType application/x-compress .Z
     AddType application/x-gzip .gz .tgz
+	AddType application/x-httpd-php .php
 
     #
     # AddHandler allows you to map certain file extensions to "handlers":
