finetuning on the config

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -4,6 +4,8 @@ parts =
 #   nginx
 #   spawn-fcgi
    php
+   php-memcache
+   php-apc
    mysql
    memcached
 #   postgresql
@@ -19,6 +21,7 @@ php = 5.3.6
 gettext = 0.18
 curl = 7.21.4
 memcached = 1.4.5
+libmemcached = 0.48
 nginx = 0.8.54
 pcre = 8.02
 
@@ -36,7 +39,6 @@ force-overwrite = true
 server_admin = admin@localhost
 interpreted-options = hostname
 hostname = os.uname()[1]
-
 
 [create_symlinks]
 recipe = collective.recipe.cmd
@@ -100,6 +102,19 @@ configure-options =
    --with-mysqli=mysqlnd
    --with-pdo-mysql=mysqlnd
 
+[php-memcache]
+recipe = vz.recipe:phpext
+#url = http://pecl.php.net/get/memcache
+url = http://pecl.php.net/get/memcache-2.2.5.tgz
+php-location = ${php:location}
+php-configure-options = ${php:configure-options}
+
+[php-apc]
+recipe = vz.recipe:phpext
+url = http://pecl.php.net/get/APC
+php-location = ${php:location}
+php-configure-options = ${php:configure-options}
+
 [libconv]
 recipe = hexagonit.recipe.cmmi
 url = http://ftp.gnu.org/pub/gnu/libiconv/libiconv-1.13.1.tar.gz
@@ -116,10 +131,15 @@ url = http://ftp.gnu.org/gnu/gettext/gettext-${versions:gettext}.tar.gz
 recipe = hexagonit.recipe.cmmi
 url = http://curl.haxx.se/download/curl-${versions:curl}.tar.gz
 
+[libmemcached]
+recipe = hexagonit.recipe.cmmi
+url = http://download.tangent.org/libmemcached-${versions:libmemcached}.tar.gz
+
 [memcached]
 recipe = hexagonit.recipe.cmmi
 url = http://memcached.googlecode.com/files/memcached-${versions:memcached}.tar.gz
-configure-options =
+port = ${config:memcached-port}
+configure-options = 
    --with-libevent=${libevent:location}
 
 [apache]
