--- a/buildout.cfg
+++ b/buildout.cfg
@@ -6,6 +6,7 @@ parts =
    php
    php-memcache
    php-apc
+   php-phpunit
    mysql
    memcached
 #   postgresql
@@ -102,17 +103,27 @@ configure-options =
    --with-mysqli=mysqlnd
    --with-pdo-mysql=mysqlnd
 
-[php-memcache]
-recipe = vz.recipe:phpext
-#url = http://pecl.php.net/get/memcache
-url = http://pecl.php.net/get/memcache-2.2.5.tgz
-php-location = ${php:location}
-php-configure-options = ${php:configure-options}
-
 [php-apc]
-recipe = vz.recipe:phpext
-url = http://pecl.php.net/get/APC
-php-location = ${php:location}
+recipe = collective.recipe.cmd
+on_install = true
+on_update = true
+cmds =
+  ${php:location}/bin/pecl install \
+	--force \
+	--alldeps \
+	--php_ini=${php:location}/etc/php.ini \
+    apc
+
+[php-phpunit]
+recipe = collective.recipe.cmd
+on_install = true
+on_update = true
+cmds =
+  ${php:location}/bin/pear channel-discover pear.phpunit.de
+  ${php:location}/bin/pear install \
+	--force \
+	--alldeps \
+	phpunit/PHPUnit-3.4.15
 php-configure-options = ${php:configure-options}
 
 [libconv]
@@ -130,10 +141,6 @@ url = http://ftp.gnu.org/gnu/gettext/gettext-${versions:gettext}.tar.gz
 [curl]
 recipe = hexagonit.recipe.cmmi
 url = http://curl.haxx.se/download/curl-${versions:curl}.tar.gz
-
-[libmemcached]
-recipe = hexagonit.recipe.cmmi
-url = http://download.tangent.org/libmemcached-${versions:libmemcached}.tar.gz
 
 [memcached]
 recipe = hexagonit.recipe.cmmi
