--- a/buildout.cfg
+++ b/buildout.cfg
@@ -4,7 +4,7 @@ parts =
 #   nginx
 #   spawn-fcgi
    php
-   php-memcache
+#   php-memcache
    php-apc
    php-phpunit
    mysql
@@ -15,6 +15,7 @@ parts =
    supervisor
 
 versions = versions
+develop = z3c.recipe.filetemplate
 
 [versions]
 apache-httpd = 2.2.17
@@ -36,10 +37,10 @@ memcached-port = 11222
 [templates]
 recipe = z3c.recipe.filetemplate
 source-directory = template
-force-overwrite = true
 server_admin = admin@localhost
 interpreted-options = hostname
 hostname = os.uname()[1]
+force-overwrite = true
 
 [create_symlinks]
 recipe = collective.recipe.cmd
@@ -97,6 +98,7 @@ configure-options =
    --enable-xml
    --with-xml 
    --with-memcached=${memcached:location}
+   --without-iconv
 
 # as recommended by mysql http://dev.mysql.com/downloads/connector/php-mysqlnd/
    --with-mysql=${mysql:location} 
@@ -168,7 +170,7 @@ configure-options =
 
 [mysql]
 recipe = hexagonit.recipe.cmmi
-url = http://ftp.gwdg.de/pub/misc/mysql/Downloads/MySQL-5.1/mysql-5.1.53.tar.gz
+url = http://downloads.mysql.com/archives/mysql-5.1/mysql-5.1.53.tar.gz 
 strip-top-level-dir = true
 port = ${config:mysqld-port}
 root-password = ${config:mysqld-root-password}
