better alias building in /bin

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -4,7 +4,7 @@ parts =
 #   nginx
 #   spawn-fcgi
    php
-#   php-memcache
+   php-libmemcached
    php-apc
    php-phpunit
    mysql
@@ -54,20 +54,11 @@ cmds =
  ln -sf ${gettext:location}/bin/gettext.sh .
  ln -sf ${curl:location}/bin/curl .
 
- ln -sf ${memcached:location}/bin/memcached .
-
- ln -sf ${php:location}/bin/php .
- ln -sf ${php:location}/bin/phpunit .
- ln -sf ${php:location}/bin/pear .
- ln -sf ${php:location}/bin/pecl .
- ln -sf ${php:location}/bin/phpize .
-
- ln -sf ${mysql:location}/bin/mysql .
- ln -sf ${mysql:location}/bin/mysqldump .
-
- ln -sf ${apache:location}/bin/apachectl .
- ln -sf ${apache:location}/bin/ab .
-
+ ln -sf ${memcached:location}/bin/* .
+ ln -sf ${php:location}/bin/* .
+ ln -sf ${mysql:location}/bin/* .
+ ln -sf ${apache:location}/bin/* .
+ ln -sf ${php-libmemcached:location}/bin/* .
 # ln -sf ${nginx:location}/sbin/nginx .
 
 [supervisor]
@@ -104,6 +95,10 @@ configure-options =
    --with-mysql=${mysql:location} 
    --with-mysqli=mysqlnd
    --with-pdo-mysql=mysqlnd
+
+[php-libmemcached]
+recipe = hexagonit.recipe.cmmi
+url = http://download.tangent.org/libmemcached-0.37.tar.gz
 
 [php-apc]
 recipe = collective.recipe.cmd
