static libmemcache in config

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -4,9 +4,6 @@ parts =
 #   nginx
 #   spawn-fcgi
    php
-   php-libmemcached
-   php-apc
-   php-phpunit
    mysql
    memcached
 #   postgresql
@@ -88,7 +85,7 @@ configure-options =
    --enable-mbstring
    --enable-xml
    --with-xml 
-   --with-memcached=${memcached:location}
+   --with-libmemcached-dir=${php-libmemcached:location}
    --without-iconv
 
 # as recommended by mysql http://dev.mysql.com/downloads/connector/php-mysqlnd/
