finally the memcached extension works

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,18 +1,17 @@
 [buildout]
 parts =     
    apache
-#   nginx
-#   spawn-fcgi
    php
    mysql
-   memcached
-#   postgresql
+   php-memcached
+   php-apc
+   php-xdebug
    create_symlinks
    templates
    supervisor
 
 versions = versions
-develop = z3c.recipe.filetemplate
+develop = z3c.recipe.filetemplate s2.recipe
 
 [versions]
 apache-httpd = 2.2.17
@@ -55,7 +54,7 @@ cmds =
  ln -sf ${php:location}/bin/* .
  ln -sf ${mysql:location}/bin/* .
  ln -sf ${apache:location}/bin/* .
- ln -sf ${php-libmemcached:location}/bin/* .
+ ln -sf ${libmemcached:location}/bin/* .
 # ln -sf ${nginx:location}/sbin/nginx .
 
 [supervisor]
@@ -72,6 +71,8 @@ recipe = hexagonit.recipe.cmmi
 url = http://us3.php.net/get/php-${versions:php}.tar.gz/from/de.php.net/mirror
 
 configure-options = 
+   --with-config-file-scan-dir=${buildout:parts-directory}/php/etc/conf.d
+   --with-config-file-path=${buildout:parts-directory}/php/etc
    --enable-cgi
    --with-apxs2=${apache:location}/bin/apxs
    --with-config-file-path=${buildout:directory}/var/php
@@ -85,7 +86,7 @@ configure-options =
    --enable-mbstring
    --enable-xml
    --with-xml 
-   --with-libmemcached-dir=${php-libmemcached:location}
+   --with-libmemcached-dir=${libmemcached:location}
    --without-iconv
 
 # as recommended by mysql http://dev.mysql.com/downloads/connector/php-mysqlnd/
@@ -93,20 +94,27 @@ configure-options =
    --with-mysqli=mysqlnd
    --with-pdo-mysql=mysqlnd
 
-[php-libmemcached]
+[libmemcached]
 recipe = hexagonit.recipe.cmmi
-url = http://download.tangent.org/libmemcached-0.37.tar.gz
+url = http://download.tangent.org/libmemcached-${versions:libmemcached}.tar.gz
+
+[php-memcached]
+recipe = s2.recipe:phpext
+url = http://pecl.php.net/get/memcached-1.0.2.tgz
+php-location = ${php:location}
+configure-options = ${php:configure-options}
 
 [php-apc]
-recipe = collective.recipe.cmd
-on_install = true
-on_update = true
-cmds =
-  ${php:location}/bin/pecl install \
-	--force \
-	--alldeps \
-	--php_ini=${php:location}/etc/php.ini \
-    apc
+recipe = s2.recipe:phpext
+url = http://pecl.php.net/get/APC
+php-location = ${php:location}
+php-configure-options = ${php:configure-options}
+
+[php-xdebug]
+recipe = s2.recipe:phpext
+url = http://pecl.php.net/get/xdebug
+php-location = ${php:location}
+php-configure-options = ${php:configure-options}
 
 [php-phpunit]
 recipe = collective.recipe.cmd
@@ -195,7 +203,3 @@ url = ftp://ftp.csx.cam.ac.uk/pub/software/programming/pcre/pcre-${versions:pcre
 [php-fpm]
 recipe = hexagonit.recipe.cmmi
 url = http://php-fpm.org/downloads/php-5.2.17-fpm-0.5.14.diff.gz
-
-[postgresql]
-recipe = hexagonit.recipe.cmmi
-url = http://wwwmaster.postgresql.org/redir/53/h/source/v9.0.3/postgresql-9.0.3.tar.gz
