--- a/buildout.cfg
+++ b/buildout.cfg
@@ -6,9 +6,9 @@ parts =
    php-memcached
    php-apc
    php-xdebug
+   php-phpunit
    create_symlinks
    templates
-   supervisor
 
 versions = versions
 develop = z3c.recipe.filetemplate s2.recipe
@@ -116,6 +116,12 @@ url = http://pecl.php.net/get/xdebug
 php-location = ${php:location}
 php-configure-options = ${php:configure-options}
 
+[php-redis]
+recipe = s2.recipe:phpext
+url = https://github.com/nicolasff/phpredis/tarball/master
+php-location = ${php:location}
+php-configure-options = ${php:configure-options}
+
 [php-phpunit]
 recipe = collective.recipe.cmd
 on_install = true
@@ -187,6 +193,10 @@ configure-options = --with-extra-charsets=complex
 #                  --with-federated-storage-engine
 #                  --without-bench
 #                  --with-sphinx-storage-engine
+
+[mongodb]
+recipe = hexagonit.recipe.cmmi
+url = http://downloads.mongodb.org/src/mongodb-src-r1.8.2.tar.gz
 
 [nginx]
 recipe = hexagonit.recipe.cmmi
