--- a/buildout.cfg
+++ b/buildout.cfg
@@ -192,6 +192,7 @@ configure-options = -DCMAKE_INSTALL_PREFIX=${buildout:directory}/parts/mysql
                   -DENABLED_LOCAL_INFILE=1
                   -DWITH_FEDERATED_STORAGE_ENGINE=1
                   -DWITH_INNODB_STORAGE_ENGINE=1
+                  -DWITH_INNODB_PLUGIN_STORAGE_ENGINE=1
 
 [mongodb]
 recipe = hexagonit.recipe.cmmi
