fixed confifixed configg

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -10,6 +10,7 @@ parts =
    php-phpunit
    create_symlinks
    templates
+   redis
 #   supervisor
 
 versions = versions
@@ -135,6 +136,16 @@ cmds =
 	--alldeps \
 	phpunit/PHPUnit-3.4.15
 php-configure-options = ${php:configure-options}
+
+[redis]
+recipe = collective.recipe.cmd
+on_install = true
+on_update = true
+cmds =
+  wget http://redis.googlecode.com/files/redis-2.2.11.tar.gz
+  tar xzf redis-2.2.11.tar.gz
+  cd redis-2.2.11
+  make
 
 [libconv]
 recipe = hexagonit.recipe.cmmi
