added redis and php-redis. the latter does not work yet

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -11,6 +11,7 @@ parts =
    create_symlinks
    templates
    redis
+   php-redis
 #   supervisor
 
 versions = versions
@@ -58,6 +59,12 @@ cmds =
  ln -sf ${mysql:location}/bin/* .
  ln -sf ${apache:location}/bin/* .
  ln -sf ${libmemcached:location}/bin/* .
+ ln -sf ${redis:location}/src/redis-server .
+ ln -sf ${redis:location}/src/redis-cli .
+ ln -sf ${redis:location}/src/redis-benchmark .
+ ln -sf ${redis:location}/src/redis-check-dump .
+ ln -sf ${redis:location}/src/redis-check-aof .
+
 # ln -sf ${nginx:location}/sbin/nginx .
 
 [supervisor]
@@ -120,7 +127,7 @@ php-location = ${php:location}
 php-configure-options = ${php:configure-options}
 
 [php-redis]
-recipe = s2.recipe:phpext
+recipe = hexagonit.recipe.cmmi
 url = https://github.com/nicolasff/phpredis/tarball/master
 php-location = ${php:location}
 php-configure-options = ${php:configure-options}
@@ -141,11 +148,17 @@ php-configure-options = ${php:configure-options}
 recipe = collective.recipe.cmd
 on_install = true
 on_update = true
+location = ${buildout:directory}/parts/redis
 cmds =
+  cd parts
+  mkdir redis__compile__
+  cd redis__compile__
   wget http://redis.googlecode.com/files/redis-2.2.11.tar.gz
   tar xzf redis-2.2.11.tar.gz
   cd redis-2.2.11
   make
+  mv ${buildout:directory}/parts/redis__compile__/redis-2.2.11 ${buildout:directory}/parts/redis
+  rm -rf ${buildout:directory}/parts/redis__compile__
 
 [libconv]
 recipe = hexagonit.recipe.cmmi
