php redis is now in

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -129,8 +129,7 @@ php-configure-options = ${php:configure-options}
 [php-redis]
 recipe = hexagonit.recipe.cmmi
 url = https://github.com/nicolasff/phpredis/tarball/master
-php-location = ${php:location}
-php-configure-options = ${php:configure-options}
+configure-command = phpize && ./configure
 
 [php-phpunit]
 recipe = collective.recipe.cmd
@@ -147,7 +146,7 @@ php-configure-options = ${php:configure-options}
 [redis]
 recipe = collective.recipe.cmd
 on_install = true
-on_update = true
+on_update = false
 location = ${buildout:directory}/parts/redis
 cmds =
   cd parts
@@ -221,19 +220,3 @@ configure-options = -DCMAKE_INSTALL_PREFIX=${buildout:directory}/parts/mysql
 [mongodb]
 recipe = hexagonit.recipe.cmmi
 url = http://downloads.mongodb.org/src/mongodb-src-r1.8.2.tar.gz
-
-[nginx]
-recipe = hexagonit.recipe.cmmi
-url = http://sysoev.ru/nginx/nginx-${versions:nginx}.tar.gz
-configure-options =
-   --with-pcre=${pcre:location}__compile__/pcre-${versions:pcre}
-
-[pcre]
-# required for NGINX URL Rewrite
-recipe = hexagonit.recipe.cmmi
-keep-compile-dir = true
-url = ftp://ftp.csx.cam.ac.uk/pub/software/programming/pcre/pcre-${versions:pcre}.tar.gz
-
-[php-fpm]
-recipe = hexagonit.recipe.cmmi
-url = http://php-fpm.org/downloads/php-5.2.17-fpm-0.5.14.diff.gz
