--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,16 +2,18 @@
 parts =     
    apache
    php
-   cmake
    mysql
+   redis
+#   mongodb
    php-memcached
    php-apc
    php-xdebug
    php-phpunit
+   php-redis
+   php-mongodb
+   pcre
    create_symlinks
    templates
-   redis
-   php-redis
 #   supervisor
 
 versions = versions
@@ -64,8 +66,7 @@ cmds =
  ln -sf ${redis:location}/src/redis-benchmark .
  ln -sf ${redis:location}/src/redis-check-dump .
  ln -sf ${redis:location}/src/redis-check-aof .
-
-# ln -sf ${nginx:location}/sbin/nginx .
+ ln -sf ${pcre:location}/bin/* .
 
 [supervisor]
 recipe = collective.recipe.supervisor
@@ -134,7 +135,7 @@ configure-command = phpize && ./configure
 [php-phpunit]
 recipe = collective.recipe.cmd
 on_install = true
-on_update = true
+on_update = false
 cmds =
   ${php:location}/bin/pear channel-discover pear.phpunit.de
   ${php:location}/bin/pear install \
@@ -206,17 +207,33 @@ strip-top-level-dir = true
 
 [mysql]
 recipe = hexagonit.recipe.cmmi
-url = http://ftp.gwdg.de/pub/misc/mysql/Downloads/MySQL-5.5/mysql-5.5.13.tar.gz
+url = http://downloads.mysql.com/archives/mysql-5.1/mysql-5.1.53.tar.gz 
 strip-top-level-dir = true
-configure-command = ${cmake:location}/bin/cmake
-configure-options = -DCMAKE_INSTALL_PREFIX=${buildout:directory}/parts/mysql
-                  -DEXTRA_CHARSETS=all
-                  -DMYSQL_UNIX_ADDR=${buildout:directory}/var/mysql/mysql.sock
-                  -DENABLED_LOCAL_INFILE=1
-                  -DWITH_FEDERATED_STORAGE_ENGINE=1
-                  -DWITH_INNODB_STORAGE_ENGINE=1
-                  -DWITH_INNODB_PLUGIN_STORAGE_ENGINE=1
+port = ${config:mysqld-port}
+root-password = ${config:mysqld-root-password}
+
+configure-options = --with-extra-charsets=complex
+                 --enable-thread-safe-client
+                 --with-unix-socket-path=${buildout:directory}/var/mysql/mysql.sock
+                 --enable-assembler
+                 --enable-local-infile
+                 --with-big-tables
+                 --with-plugins=myisam,myisammrg,federated,innodb_plugin
+
+# options for 5.0.x
+#                  --with-federated-storage-engine
+#                  --without-bench
+#                  --with-sphinx-storage-engine
 
 [mongodb]
 recipe = hexagonit.recipe.cmmi
 url = http://downloads.mongodb.org/src/mongodb-src-r1.8.2.tar.gz
+
+[php-mongodb]
+recipe = hexagonit.recipe.cmmi
+url = https://github.com/mongodb/mongo-php-driver/tarball/master
+configure-command = phpize && ./configure
+
+[pcre]
+recipe = hexagonit.recipe.cmmi
+url = ftp://ftp.csx.cam.ac.uk/pub/software/programming/pcre/pcre-8.02.tar.gz
