removed local config specifics and added mongo driver enabling

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -150,7 +150,7 @@ on_install = true
 on_update = false
 location = ${buildout:directory}/parts/redis
 cmds =
-  cd parts
+  cd ${buildout:directory}/parts
   mkdir redis__compile__
   cd redis__compile__
   wget http://redis.googlecode.com/files/redis-2.2.11.tar.gz
@@ -236,4 +236,4 @@ configure-command = phpize && ./configure
 
 [pcre]
 recipe = hexagonit.recipe.cmmi
-url = ftp://ftp.csx.cam.ac.uk/pub/software/programming/pcre/pcre-8.02.tar.gz
+url = ftp://ftp.csx.cam.ac.uk/pub/software/programming/pcre/pcre-${versions:pcre}.tar.gz
