various bugfixes and removed bbcode from config

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -4,10 +4,9 @@ parts =
    php
    mysql
    redis
-#   mongodb
    php-memcached
    php-apc
-   php-xdebug
+#   php-xdebug
    php-phpunit
    php-redis
    php-mongodb
@@ -135,7 +134,7 @@ configure-command = phpize && ./configure
 [php-phpunit]
 recipe = collective.recipe.cmd
 on_install = true
-on_update = false
+on_update = true
 cmds =
   ${php:location}/bin/pear channel-discover pear.phpunit.de
   ${php:location}/bin/pear install \
@@ -147,7 +146,7 @@ php-configure-options = ${php:configure-options}
 [redis]
 recipe = collective.recipe.cmd
 on_install = true
-on_update = false
+on_update = true
 location = ${buildout:directory}/parts/redis
 cmds =
   cd ${buildout:directory}/parts
