improved dependencies and redis recipe

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -6,7 +6,7 @@ parts =
    redis
    php-memcached
    php-apc
-#   php-xdebug
+   php-xdebug
    php-phpunit
    php-redis
    php-mongodb
@@ -43,6 +43,16 @@ interpreted-options = hostname
 hostname = os.uname()[1]
 force-overwrite = true
 
+[create_basic_symlinks]
+recipe = collective.recipe.cmd
+on_install = true
+on_update = true
+dummy_option = ${php:url} # hack to ensure that php is compiled before creating the symlinks
+# deps
+cmds =
+ cd ${buildout:directory}/bin
+ ln -sf ${php:location}/bin/* .
+
 [create_symlinks]
 recipe = collective.recipe.cmd
 on_install = true
@@ -54,9 +64,7 @@ cmds =
 
  ln -sf ${gettext:location}/bin/gettext.sh .
  ln -sf ${curl:location}/bin/curl .
-
  ln -sf ${memcached:location}/bin/* .
- ln -sf ${php:location}/bin/* .
  ln -sf ${mysql:location}/bin/* .
  ln -sf ${apache:location}/bin/* .
  ln -sf ${libmemcached:location}/bin/* .
@@ -110,26 +118,30 @@ url = http://download.tangent.org/libmemcached-${versions:libmemcached}.tar.gz
 
 [php-memcached]
 recipe = s2.recipe:phpext
+dummy_option = ${create_basic_symlinks:on_install} # hack to ensure that php symlinks exist
 url = http://pecl.php.net/get/memcached-1.0.2.tgz
 php-location = ${php:location}
 configure-options = ${php:configure-options}
 
 [php-apc]
 recipe = s2.recipe:phpext
+dummy_option = ${create_basic_symlinks:on_install} # hack to ensure that php symlinks exist
 url = http://pecl.php.net/get/APC
 php-location = ${php:location}
 php-configure-options = ${php:configure-options}
 
 [php-xdebug]
 recipe = s2.recipe:phpext
+dummy_option = ${create_basic_symlinks:on_install} # hack to ensure that php symlinks exist
 url = http://pecl.php.net/get/xdebug
 php-location = ${php:location}
 php-configure-options = ${php:configure-options}
 
 [php-redis]
 recipe = hexagonit.recipe.cmmi
+dummy_option = ${create_basic_symlinks:on_install} # hack to ensure that php symlinks exist
 url = https://github.com/nicolasff/phpredis/tarball/master
-configure-command = phpize && ./configure
+configure-command = ${php:location}/bin/phpize && ./configure
 
 [php-phpunit]
 recipe = collective.recipe.cmd
@@ -144,20 +156,10 @@ cmds =
 php-configure-options = ${php:configure-options}
 
 [redis]
-recipe = collective.recipe.cmd
-on_install = true
-on_update = true
-location = ${buildout:directory}/parts/redis
-cmds =
-  cd ${buildout:directory}/parts
-  mkdir redis__compile__
-  cd redis__compile__
-  wget http://redis.googlecode.com/files/redis-2.2.11.tar.gz
-  tar xzf redis-2.2.11.tar.gz
-  cd redis-2.2.11
-  make
-  mv ${buildout:directory}/parts/redis__compile__/redis-2.2.11 ${buildout:directory}/parts/redis
-  rm -rf ${buildout:directory}/parts/redis__compile__
+recipe = hexagonit.recipe.cmmi
+url = http://redis.googlecode.com/files/redis-2.2.11.tar.gz
+configure-command = #
+make-install-command = #
 
 [libconv]
 recipe = hexagonit.recipe.cmmi
@@ -230,8 +232,9 @@ url = http://downloads.mongodb.org/src/mongodb-src-r1.8.2.tar.gz
 
 [php-mongodb]
 recipe = hexagonit.recipe.cmmi
+dummy_option = ${create_basic_symlinks:on_install} # hack to ensure that php symlinks exist
 url = https://github.com/mongodb/mongo-php-driver/tarball/master
-configure-command = phpize && ./configure
+configure-command = ${php:location}/bin/phpize && ./configure
 
 [pcre]
 recipe = hexagonit.recipe.cmmi
