redis and apache running through supervisor, mysql still struggling

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -13,7 +13,7 @@ parts =
    pcre
    create_symlinks
    templates
-#   supervisor
+   supervisor
 
 versions = versions
 develop = z3c.recipe.filetemplate s2.recipe
@@ -25,7 +25,6 @@ gettext = 0.18
 curl = 7.21.4
 memcached = 1.4.5
 libmemcached = 0.48
-nginx = 0.8.54
 pcre = 8.02
 
 [config]
@@ -79,10 +78,11 @@ cmds =
 recipe = collective.recipe.supervisor
 supervisord-conf = ${buildout:parts-directory}/${:_buildout_section_name_}/supervisord.conf
 logfile = ${buildout:parts-directory}/${:_buildout_section_name_}/supervisord.log
-port = 9000
+port = 9090
 programs =
   10 mysql    	${mysql:location}/bin/mysqld_safe [${buildout:directory}] ${buildout:directory} true
-  30 apache     ${apache:location}/bin/httpd [-DNO_DETACH -f ${apache:location}/etc/conf/httpd.conf] ${buildout:directory} true
+  30 apache     ${apache:location}/bin/httpd [-DNO_DETACH -f ${apache:location}/conf/httpd.conf] ${buildout:directory} true
+  40 redis		${redis:location}/src/redis-server [${buildout:directory}] ${buildout:directory} true
 
 [php]
 recipe = hexagonit.recipe.cmmi
