--- a/buildout.cfg
+++ b/buildout.cfg
@@ -100,9 +100,9 @@ configure-options =
    --without-iconv
 
 # as recommended by mysql http://dev.mysql.com/downloads/connector/php-mysqlnd/
-   --with-mysql=${mysql:location} 
-   --with-mysqli=mysqlnd
-   --with-pdo-mysql=mysqlnd
+#   --with-mysql=${mysql:location} 
+#   --with-mysqli=mysqlnd
+#   --with-pdo-mysql=mysqlnd
 
 [libmemcached]
 recipe = hexagonit.recipe.cmmi
@@ -206,23 +206,18 @@ strip-top-level-dir = true
 
 [mysql]
 recipe = hexagonit.recipe.cmmi
-url = http://downloads.mysql.com/archives/mysql-5.1/mysql-5.1.53.tar.gz 
+url = http://ftp.gwdg.de/pub/misc/mysql/Downloads/MySQL-5.5/mysql-5.5.13.tar.gz 
 strip-top-level-dir = true
 port = ${config:mysqld-port}
 root-password = ${config:mysqld-root-password}
 
-configure-options = --with-extra-charsets=complex
-                 --enable-thread-safe-client
-                 --with-unix-socket-path=${buildout:directory}/var/mysql/mysql.sock
-                 --enable-assembler
-                 --enable-local-infile
-                 --with-big-tables
-                 --with-plugins=myisam,myisammrg,federated,innodb_plugin
-
-# options for 5.0.x
-#                  --with-federated-storage-engine
-#                  --without-bench
-#                  --with-sphinx-storage-engine
+configure-command = ${cmake:location}/bin/cmake
+configure-options = -DCMAKE_INSTALL_PREFIX=${buildout:directory}/parts/mysql
+                  -DEXTRA_CHARSETS=all
+                  -DMYSQL_UNIX_ADDR=${buildout:directory}/var/mysql/mysql.sock
+                  -DENABLED_LOCAL_INFILE=1
+                  -DWITH_FEDERATED_STORAGE_ENGINE=1
+                  -DWITH_INNODB_STORAGE_ENGINE=1
 
 [mongodb]
 recipe = hexagonit.recipe.cmmi
