mysql will still not start due to lack of innodb even though configured

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -33,8 +33,10 @@ apache-port-ssl = 8443
 mysqld-port = 3306
 mysqld-root-password = root
 memcached-port = 11222
+supervisord-port = 9090
 
 [templates]
+
 recipe = z3c.recipe.filetemplate
 source-directory = template
 server_admin = admin@localhost
@@ -47,7 +49,6 @@ recipe = collective.recipe.cmd
 on_install = true
 on_update = true
 dummy_option = ${php:url} # hack to ensure that php is compiled before creating the symlinks
-# deps
 cmds =
  cd ${buildout:directory}/bin
  ln -sf ${php:location}/bin/* .
@@ -56,8 +57,6 @@ cmds =
 recipe = collective.recipe.cmd
 on_install = true
 on_update = true
-dummy_option = ${php:url} # hack to ensure that php is compiled before creating the symlinks
-# deps
 cmds =
  cd ${buildout:directory}/bin
 
@@ -86,6 +85,7 @@ programs =
 
 [php]
 recipe = hexagonit.recipe.cmmi
+dummy_option = ${templates:source-directory}
 url = http://us3.php.net/get/php-${versions:php}.tar.gz/from/de.php.net/mirror
 
 configure-options = 
@@ -106,11 +106,14 @@ configure-options =
    --with-xml 
    --with-libmemcached-dir=${libmemcached:location}
    --without-iconv
-
-# as recommended by mysql http://dev.mysql.com/downloads/connector/php-mysqlnd/
-   --with-mysql=${mysql:location} 
+   --with-mysqlnd
    --with-mysqli=mysqlnd
    --with-pdo-mysql=mysqlnd
+
+# as recommended by mysql http://dev.mysql.com/downloads/connector/php-mysqlnd/
+#   --with-mysql=${mysql:location} 
+#   --with-mysqli=mysqlnd
+#   --with-pdo-mysql=mysqlnd
 
 [libmemcached]
 recipe = hexagonit.recipe.cmmi
@@ -208,23 +211,19 @@ strip-top-level-dir = true
 
 [mysql]
 recipe = hexagonit.recipe.cmmi
-url = http://downloads.mysql.com/archives/mysql-5.1/mysql-5.1.53.tar.gz 
+url = http://ftp.gwdg.de/pub/misc/mysql/Downloads/MySQL-5.5/mysql-5.5.13.tar.gz 
 strip-top-level-dir = true
 port = ${config:mysqld-port}
 root-password = ${config:mysqld-root-password}
 
-configure-options = --with-extra-charsets=complex
-                 --enable-thread-safe-client
-                 --with-unix-socket-path=${buildout:directory}/var/mysql/mysql.sock
-                 --enable-assembler
-                 --enable-local-infile
-                 --with-big-tables
-                 --with-plugins=myisam,myisammrg,federated,innodb_plugin
-
-# options for 5.0.x
-#                  --with-federated-storage-engine
-#                  --without-bench
-#                  --with-sphinx-storage-engine
+configure-command = ${cmake:location}/bin/cmake
+configure-options = 
+	-DCMAKE_INSTALL_PREFIX=${buildout:directory}/parts/mysql
+	-DEXTRA_CHARSETS=all
+	-DMYSQL_UNIX_ADDR=${buildout:directory}/var/mysql/mysql.sock
+	-DENABLED_LOCAL_INFILE=1
+	-DWITH_FEDERATED_STORAGE_ENGINE=1
+	-DWITH_INNODB_STORAGE_ENGINE=1
 
 [mongodb]
 recipe = hexagonit.recipe.cmmi
